refactor: use URI instead of deprecated URL constructor